--- a/render.yaml
+++ b/render.yaml
@@ -5,5 +5,6 @@ services:
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn merobazar.wsgi:application
     postDeployCommand: |
+      python manage.py makemigrations --noinput
       python manage.py migrate
       python manage.py collectstatic --noinput
